# libaudclient

./: .gitignore  AUTHORS  COPYING  Makefile  acinclude.m4  configure.ac  extra.mk.in
src/: Makefile
src/audacious/: Makefile  dbus-client-bindings.h  dbus.h
src/libaudclient/: Makefile
